@@ -67,7 +67,6 @@ IncludeSymbolEntryPage.export=Export
 IncludeSymbolEntryPage.up=Up
 IncludeSymbolEntryPage.down=Down
 IncludeSymbolsEntryPage.show_inherited.check=Show Inherited Paths
-IncludeSymbolsEntryPage.show_unrelated.check=Show Unrelated Resources
 IncludeSymbolEntryPage.addSymbol.title=Add Preprocessor Symbol
 IncludeSymbolEntryPage.addSymbol.message=Symbol definition:
 IncludeSymbolEntryPage.editSymbol.title=Edit Preprocessor Symbol
